# arxiv-summary

./: .gitignore  CLAUDE.md  DOCS.md  MATCH.md  README.md  build_manifest.py  evaluate.py  fetch_arxiv.py  index.html  main.py  manifest.json  pyproject.toml  run_digest.sh  summarize.py  weekly_match.sh
.github/workflows/: ai-report.yml
daily_reports/: AI_Daily_Trend_2026-01-14.md  AI_Daily_Trend_2026-01-27.md  AI_Daily_Trend_2026-01-30.md  AI_Daily_Trend_2026-02-05.md  AI_Daily_Trend_2026-02-06.md  AI_Daily_Trend_2026-02-12.md  AI_Daily_Trend_2026-02-16.md  AI_Daily_Trend_2026-02-18.md  AI_Daily_Trend_2026-02-19.md  AI_Daily_Trend_2026-02-20.md  AI_Daily_Trend_2026-02-23.md  AI_Daily_Trend_2026-02-24.md  AI_Daily_Trend_2026-02-25.md  AI_Daily_Trend_2026-03-06.md  AI_Daily_Trend_2026-03-10.md
daily_reports/2026/01/: AI_Daily_Trend_2026-01-12.md  AI_Daily_Trend_2026-01-13.md  AI_Daily_Trend_2026-01-16.md
daily_reports/2026/02/: AI_Daily_Trend_2026-02-03.md  AI_Daily_Trend_2026-02-10.md  AI_Daily_Trend_2026-02-27.md
daily_reports/2026/03/: AI_Daily_Trend_2026-03-11.md  AI_Daily_Trend_2026-03-13.md  AI_Daily_Trend_2026-03-17.md  AI_Daily_Trend_2026-03-18.md  AI_Daily_Trend_2026-03-19.md  AI_Daily_Trend_2026-03-20.md  AI_Daily_Trend_2026-03-24.md
daily_reports/2026/04/: AI_Daily_Trend_2026-04-03.md  AI_Daily_Trend_2026-04-07.md  CV_Daily_Trend_2026-04-15.md  CV_Daily_Trend_2026-04-16.md  CV_Daily_Trend_2026-04-20.md  (+3 more)
digests/: 2026-07-14.md
prompts/: daily_digest.md  daily_rules.md  weekly_match.md  weekly_rules.md
scripts/: agent_setup.sh
(+60 files in other folders)
